@@ -1034,48 +1034,66 @@ void _GMP_prev_prime(mpz_t n)
   mpz_clear(d);
 }
 
-#define HALF_UI_WORD (UVCONST(1) << (sizeof(unsigned long)*4))
 void _GMP_pn_primorial(mpz_t prim, UV n)
 {
   UV p = 2;
   PRIME_ITERATOR(iter);
-  mpz_t acc;
-  int k = -20;
 
-  mpz_set_ui(prim, 1);
-  mpz_init_set_ui(acc, 1);
-  while (n >= 2 && p < HALF_UI_WORD) {
-    mpz_mul_ui(acc, acc, p * prime_iterator_next(&iter));
-    p = prime_iterator_next(&iter);
-    n -= 2;
-    if (k++ > 24) {
-      mpz_mul(prim, prim, acc);
-      mpz_set_ui(acc, 1);
-      k = 0;
+  if (n < 1000) {  /* Don't go above 6500 to prevent overflow below */
+    /* Simple linear multiplication, two at a time */
+    mpz_set_ui(prim, 1);
+    while (n-- > 0) {
+      if (n > 0) { p *= prime_iterator_next(&iter); n--; }
+      mpz_mul_ui(prim, prim, p);
+      p = prime_iterator_next(&iter);
     }
-  }
-  while (n-- > 0) {
-    mpz_mul_ui(acc, acc, p);
-    p = prime_iterator_next(&iter);
-    if (k++ > 16) {
-      mpz_mul(prim, prim, acc);
-      mpz_set_ui(acc, 1);
-      k = 0;
+  } else {
+    /* Shallow product tree, ~10x faster for large values */
+    mpz_t t[16];
+    UV i;
+    for (i = 0; i < 16; i++)  mpz_init_set_ui(t[i], 1);
+    i = 0;
+    while (n-- > 0) {
+      mpz_mul_ui(t[i&15], t[i&15], p);
+      p = prime_iterator_next(&iter);
+      i++;
     }
+    for (i = 0; i < 8; i++)  mpz_mul(t[i], t[2*i], t[2*i+1]);
+    for (i = 0; i < 4; i++)  mpz_mul(t[i], t[2*i], t[2*i+1]);
+    for (i = 0; i < 2; i++)  mpz_mul(t[i], t[2*i], t[2*i+1]);
+    mpz_mul(prim, t[0], t[1]);
+    for (i = 0; i < 16; i++)  mpz_clear(t[i]);
   }
   prime_iterator_destroy(&iter);
-  mpz_mul(prim, prim, acc);
-  mpz_clear(acc);
 }
 void _GMP_primorial(mpz_t prim, mpz_t n)
 {
   UV p = 2;
   PRIME_ITERATOR(iter);
 
-  mpz_set_ui(prim, 1);
-  while (mpz_cmp_ui(n, p) >= 0) {
-    mpz_mul_ui(prim, prim, p);
-    p = prime_iterator_next(&iter);
+  if (mpz_cmp_ui(n, 4000) < 0) {
+    /* Simple linear multiplication, one at a time */
+    mpz_set_ui(prim, 1);
+    while (mpz_cmp_ui(n, p) >= 0) {
+      mpz_mul_ui(prim, prim, p);
+      p = prime_iterator_next(&iter);
+    }
+  } else {
+    /* Shallow product tree, ~10x faster for large values */
+    mpz_t t[16];
+    UV i;
+    for (i = 0; i < 16; i++)  mpz_init_set_ui(t[i], 1);
+    i = 0;
+    while (mpz_cmp_ui(n, p) >= 0) {
+      mpz_mul_ui(t[i&15], t[i&15], p);
+      p = prime_iterator_next(&iter);
+      i++;
+    }
+    for (i = 0; i < 8; i++)  mpz_mul(t[i], t[2*i], t[2*i+1]);
+    for (i = 0; i < 4; i++)  mpz_mul(t[i], t[2*i], t[2*i+1]);
+    for (i = 0; i < 2; i++)  mpz_mul(t[i], t[2*i], t[2*i+1]);
+    mpz_mul(prim, t[0], t[1]);
+    for (i = 0; i < 16; i++)  mpz_clear(t[i]);
   }
   prime_iterator_destroy(&iter);
 }
@@ -1200,18 +1218,21 @@ int _GMP_pbrent_factor(mpz_t n, mpz_t f, UV a, UV rounds)
 
 void _GMP_lcm_of_consecutive_integers(UV B, mpz_t m)
 {
-  UV p, p_power, pmin;
+  UV i, p, p_power, pmin;
+  mpz_t t[8];
   PRIME_ITERATOR(iter);
 
+  /* Create eight sub-products to combine at the end. */
+  for (i = 0; i < 8; i++)  mpz_init_set_ui(t[i], 1);
+  i = 0;
   /* For each prime, multiply m by p^floor(log B / log p), which means
    * raise p to the largest power e such that p^e <= B.
    */
-  mpz_set_ui(m, 1);
   if (B >= 2) {
     p_power = 2;
     while (p_power <= B/2)
       p_power *= 2;
-    mpz_mul_ui(m, m, p_power);
+    mpz_mul_ui(t[i&7], t[i&7], p_power);  i++;
   }
   p = prime_iterator_next(&iter);
   while (p <= B) {
@@ -1221,13 +1242,18 @@ void _GMP_lcm_of_consecutive_integers(UV B, mpz_t m)
     p_power = p*p;
     while (p_power <= pmin)
       p_power *= p;
-    mpz_mul_ui(m, m, p_power);
+    mpz_mul_ui(t[i&7], t[i&7], p_power);  i++;
     p = prime_iterator_next(&iter);
   }
   while (p <= B) {
-    mpz_mul_ui(m, m, p);
+    mpz_mul_ui(t[i&7], t[i&7], p);  i++;
     p = prime_iterator_next(&iter);
   }
+  /* combine the eight sub-products */
+  for (i = 0; i < 4; i++)  mpz_mul(t[i], t[2*i], t[2*i+1]);
+  for (i = 0; i < 2; i++)  mpz_mul(t[i], t[2*i], t[2*i+1]);
+  mpz_mul(m, t[0], t[1]);
+  for (i = 0; i < 8; i++)  mpz_clear(t[i]);
   prime_iterator_destroy(&iter);
 }
 
