@@ -7,6 +7,10 @@ Revision history for Perl module Math::Prime::Util::GMP
     - Limited version of treesieve to improve trial factor.  This helps
       a lot when doing is_prob_prime on very large (e.g. 50k+ digit) inputs.
 
+    - Use shallow product tree for primorials.  Large primorials are 2 to 12
+      times faster.  Break consecutive_integer_lcm into four sub-products so
+      it runs 2-4x faster for large inputs.
+
 0.14 2013-08-07
 
     - Fix small certificates leaving out the "N " for small numbers.
